gdnative/tests/ui/export_fail_09.rs
use gdnative::prelude::*;

#[derive(Export, ToVariant)]
#[export(kind = "enum")]
#[export(kind = "enum")]
pub enum Foo {
    Bar,
}

fn main() {}
